--- a/common/build.gradle
+++ b/common/build.gradle
@@ -17,8 +17,8 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.2"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         minSdkVersion 18
@@ -39,8 +39,8 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.gms:play-services-wearable:8.4.0'
-    compile 'com.android.support:palette-v7:23.1.1'
+    compile 'com.google.android.gms:play-services-wearable:10.2.1'
+    compile 'com.android.support:palette-v7:25.3.1'
     compile 'com.google.android.apps.muzei:muzei-api:2.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
